fix: bike renting and returning
